<resources>
    <string name="app_name">MobileApp</string>
    <string name="description">Description</string>
    <string name="task_title">Task Title</string>

    <string name="task_budget">Budget</string>
    <string name="work_type">Work Type</string>

    <string name="name">Name</string>
    <string name="addresses">Address</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email:</string>
    <string name="mobile">Mobile</string>
    <string name="pin_code">Pin Code</string>
    <string name="current_city">Current City</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="current_education">Current Education</string>
    <string name="field_of_interest">Field of Interest</string>
    <string name="title_activity_task_post">TaskPostActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="location">Location</string>
    <string name="address">Address</string>

</resources>